Services/rancher/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.zlaya.tech`)
      kind: Rule
      services:
        - name: rancher-lb
          port: 443
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: zlayatech-production-tls
